--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -9,7 +9,9 @@
                 "-g",
                 "${workspaceFolder}/*.cpp",
                 "-o",
-                "${fileDirname}/${fileBasenameNoExtension}"
+                "${fileDirname}/${fileBasenameNoExtension}",
+                "-lcrypto++"
+
             ],
             "options": {
                 "cwd": "${fileDirname}"
