restructured for web ui

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -10,7 +10,10 @@
                 "${workspaceFolder}/*.cpp",
                 "-o",
                 "${fileDirname}/${fileBasenameNoExtension}",
-                "-lcrypto++"
+                "-lcrypto",
+                "-lcrypto++",
+                "-lpthread",
+                "-lssl",
 
             ],
             "options": {
